# TeamAssistant

./: .gitignore  README.md  data.json  index.html  package-lock.json  package.json  server.js  vite.config.ts
backend-cpp/: CMakeLists.txt  README.md  admin.json  schema.sql
backend-cpp/src/: main.cpp
backend-cpp/tests/: concurrency-plan.test.mjs  concurrency_bench.cpp
docs/: api-v2.md  migration.md
frontend/: eslint.config.js  index.html  vite.config.ts
frontend/src/: App.tsx  api.ts  dataStore.ts  index.css  polling.ts  storage.ts  subsidyPresets.ts  subsidyStats.ts  week.ts
frontend/src/components/: AdminConfig.tsx  BackupSettingsDialog.tsx  CancelModal.tsx  CreateTeamDialog.tsx  NicknameDialog.tsx  OperationLogDialog.tsx  PresetSubsidyDialog.tsx  SignupModal.tsx  SubsidyConfig.tsx  SubsidyModal.tsx  SubsidyStats.tsx  TeamTabs.tsx  TeamWeekSelector.tsx  slotGridDisplay.ts
frontend/src/components/ui/: dialog.tsx  select.tsx
frontend/test/: api.test.mjs  data-store.test.mjs  level-store.test.mjs  lock-store.test.mjs  polling.test.mjs  runtime-state.test.mjs  slot-grid-playwright.mjs  storage.test.mjs  subsidy.test.mjs  team-creation.test.mjs  text-input.test.mjs
legacy-node/: server.js
legacy-node/server/: runtime-state.js
scripts/: bench-concurrency.mjs  dev.mjs  linux-start-all.sh  serve-backend-cpp.mjs
server/: data-store.js  level-store.js  lock-store.js  read-cache.js  runtime-state.js  shared-file-lock.js
src/: App.tsx  api.ts  config.ts  dataHydration.ts  dataStore.ts  index.css  storage.ts  subsidy.ts  subsidyPresetPreview.ts  subsidyPresets.ts  teamCreation.ts  teamName.ts  textInput.ts  time.ts  types.ts  week.ts
src/components/: AdminConfig.tsx  ArchiveDialog.tsx  BackupSettingsDialog.tsx  CancelModal.tsx  CancellationNotice.tsx  CreateTeamDialog.tsx  NicknameDialog.tsx  OperationLogDialog.tsx  PixelRabbit.tsx  PresetSubsidyDialog.tsx  SignupModal.tsx  SlotGrid.tsx  SlotRolePicker.tsx  SubsidyConfig.tsx  SubsidyModal.tsx  SubsidyPresetLoader.tsx  SubsidyStats.tsx  TeamTabs.tsx  TeamWeekSelector.tsx  ThemeToggle.tsx  slotGridDisplay.ts
src/components/ui/: button-variants.ts  button.tsx  dialog.tsx  imeInput.ts  input.tsx  textarea.tsx
src/data/: martialArts.ts
src/storage/: theme.ts
test/: api.test.mjs  data-store.test.mjs  level-store.test.mjs  lock-store.test.mjs  read-cache.test.mjs  runtime-state.test.mjs  slot-grid-display.test.mjs  slot-grid-playwright.mjs  storage.test.mjs  subsidy-presets.test.mjs  subsidy.test.mjs  team-creation.test.mjs  team-name.test.mjs  text-input.test.mjs  time.test.mjs
